--- a/Dry cleaning program/Dry cleaning program/Dry cleaning program.csproj
+++ b/Dry cleaning program/Dry cleaning program/Dry cleaning program.csproj
@@ -65,6 +65,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serializer.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
